<resources>
    <string name="app_name">ProvaPratica</string>
    <string name="voltar">voltar</string>
    <string name="app_title">Calculadora</string>
    <string name="temperatura_c">C°</string>
    <string name="temperatura_f">F°</string>
    <string name="valor_pagar">valor à pagar</string>
    <string name="confirmar">Confirmar</string>
    <string name="new_name">Digite um novo nome</string>
    <string name="_temperatura_inicial">0°</string>
    <string name="btm_name">digite seu nome</string>
    <string name="calculadora_de_bolso">Calculadora de bolso</string>
    <string name="calculadora_de_desconto">Calculadora de desconto</string>
    <string name="calculadora_de_temperatura">Calculadora de temperatura</string>
    <string name="valor_desconto">valor Desconto</string>
    <string name="result_value">0</string>
    <string name="reais">R$</string>
    <string name="limpar">Limpar</string>
    <string name="calcular">calcular</string>
</resources>